--- a/public/assets/libs/datatables/datatable_style.css
+++ b/public/assets/libs/datatables/datatable_style.css
@@ -6,6 +6,7 @@
 .table-design td{
     border: 1px solid #eeeeee !important;
     text-align: center;
+    vertical-align: middle;
 }
 
 .table-design th {
